--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^7.5.3",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7"
